smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/mixins/mixins-trait-in-implicit-1-0.smithy
// Mixins can only be used in Smithy 2.0 or later. Attempted to apply a @mixin trait to `com.foo#Foo` in a model file using version ``.
namespace com.foo

@mixin
structure Foo {}
